...
            "value" : "Favorites"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoritos"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoris"
...
            "value" : "Home"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accueil"
...
            "value" : "Search"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rechercher"
...
